Fix - Horizontal Scroll, Overflow Issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,6 +30,7 @@ html {
 body {
 	height: calc(100vh - 164px);
 	font-family: var(--body-font);
+	overflow-x: hidden;
 }
 
 #fix-height-wrapper {
@@ -426,6 +427,10 @@ footer .socials ul li a:active {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+	#hero-image {
+		background-attachment: scroll;
+	}
+
 	.header-container {
 		padding-top: 116px;
 	}
